--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build-bundle:
     runs-on: ubuntu-latest
+    env:
+      GIFSKI_VERSION: 0.10.2
     steps:
       - uses: actions/checkout@v1
       - name: Build
@@ -20,7 +22,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/git')
     needs:
       - build-bundle
     steps:
