Attempt to fix release upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/gifski-bundle/*
+          files: artifacts/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
