--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
         with:
           name: gifski-bundle
           path: artifacts/
+      - name: Generate checksums
+        run: |
+          cd artifacts
+          sha256sum * > SHA256SUMS
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
